# OpenGLStudyDemo

./: .gitignore  CMakeLists.txt  del.sh  main.cpp
src/: CMakeLists.txt
src/config/: BaseOpenGL.hpp  CMakeLists.txt  ConstantConfig.cpp  ConstantConfig.hpp  Null.cpp
src/demo/: CMakeLists.txt  Demo.cpp  Demo.hpp  Makefile  Null.cpp  Null.hpp
src/demo/camera/: CMakeLists.txt  DemoCameraOne.cpp  DemoCameraOne.hpp  DemoColorOne.cpp  DemoColorOne.hpp  DemoColorThree.cpp  DemoColorThree.hpp  DemoColorTwo.cpp  DemoColorTwo.hpp  DemoLightMap.cpp  DemoLightMap.hpp  DemoMaterialOne.cpp  DemoMaterialOne.hpp  DemoMaterialsOne.cpp
src/demo/firstchapter/: CMakeLists.txt  DemoDrawChangeColorTriangle.cpp  DemoDrawChangeColorTriangle.hpp  DemoDrawColorfulTriangle.cpp  DemoDrawColorfulTriangle.hpp  DemoDrawReadLocalGLSLTriangle.cpp  DemoDrawReadLocalGLSLTriangle.hpp  DemoDrawRectangle.cpp  DemoDrawRectangle.hpp  DemoDrawTexture.cpp  DemoDrawTexture.hpp  DemoDrawTexture2.cpp  DemoDrawTexture2.hpp  (+12 more)
src/glsl/: CMakeLists.txt  FragmentBase.glsl  FragmentTexture.glsl  Shader.cpp  Shader.hpp  VertexBase.glsl  VertexFirst3d.glsl  VertexOffset.glsl  VertexReverse.glsl  VertexTexture.glsl  VertexTranslate.glsl  test.glsl
src/implement/: CMakeLists.txt  FramebufferSizeCallbackImpl.cpp  FramebufferSizeCallbackImpl.hpp
src/utils/: CMakeLists.txt  DrawBaseUtils.cpp  DrawBaseUtils.hpp  DrawRectangle.cpp  DrawRectangle.hpp  DrawTriangle.cpp  DrawTriangle.hpp  KeyboardUtils.cpp  KeyboardUtils.hpp  OpenGLInitUtils.cpp  OpenGLInitUtils.hpp  ThreadSleepUtils.cpp  ThreadSleepUtils.hpp
(+10 files in other folders)
