AUX_SOURCE_DIRECTORY(. USER_DIR_SRC)
ADD_LIBRARY(USER_SRC_LIB ${USER_DIR_SRC})


#使用命令 ADD_SUBDIRECTORY 指明本项目包含一个子目录 src 
ADD_SUBDIRECTORY( utils )
ADD_SUBDIRECTORY( config )
ADD_SUBDIRECTORY( demo )
ADD_SUBDIRECTORY( implement )
ADD_SUBDIRECTORY( glsl )

TARGET_LINK_LIBRARIES(
    USER_SRC_LIB 
    USER_SRC_UTILS_LIB 
    USER_SRC_CONFIG_LIB 
    USER_SRC_DEMO_LIB 
    USER_SRC_IMPLEMENT_LIB 
    USER_SRC_GLSL_LIB )